@@ -1,7 +1,13 @@
+2011-03-09 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCopt.c,
+	  support/regression/tests/memory.c:
+	  Fix for #3188357 from optralloc branch.
+
 2011-03-06 Borut Razem <borut.razem AT gmail.com>
 
 	* sim/ucsim/cmd.src/Makefile.in:
-          fixed for bison, byacc and flex version 2.5.4
+      fixed for bison, byacc and flex version 2.5.4
 
 2011-03-05 Borut Razem <borut.razem AT gmail.com>
 
